--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 </head>
 <body>
     <h1>Fancy Slider</h1>
+    <!-- Slider -->
     <div class="image">
         <img id="slider-img" src="mangoes/amrupali.jpg" alt="">
     </div>
     
+    <!-- JavaScript -->
     <script src="app.js"></script>
 </body>
 </html>
